# RustyN64

./: .coderabbit.yaml  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/linux-build-deps/: action.yml
.github/workflows/: antigravity-review.yml  ci.yml  pages.yml  release.yml
crates/rustyn64-audio/: Cargo.toml
crates/rustyn64-audio/benches/: audio_bench.rs
crates/rustyn64-audio/src/: lib.rs
crates/rustyn64-cart/: Cargo.toml
crates/rustyn64-cart/benches/: cart_bench.rs
crates/rustyn64-cart/src/: lib.rs  pi.rs
crates/rustyn64-cheevos/: Cargo.toml
crates/rustyn64-cheevos/src/: lib.rs
crates/rustyn64-core/: Cargo.toml
crates/rustyn64-core/src/: bus.rs  lib.rs  scheduler.rs  vi.rs
crates/rustyn64-cpu/: Cargo.toml
crates/rustyn64-cpu/benches/: cpu_bench.rs
crates/rustyn64-cpu/src/: addr.rs  alu.rs  cache.rs  cop0.rs  cop1.rs  decode.rs  exception.rs  exec.rs  fpr.rs  fpu.rs  lib.rs  mem.rs  pipeline.rs  regs.rs  softfloat.rs  sysad.rs  tlb.rs
crates/rustyn64-frontend/: Cargo.toml
crates/rustyn64-frontend/src/: app.rs  audio.rs  config.rs  emu.rs  emu_thread.rs  gfx.rs  input.rs  lib.rs  main.rs  ui_shell.rs
crates/rustyn64-netplay/: Cargo.toml
crates/rustyn64-netplay/src/: lib.rs
crates/rustyn64-rdp/: Cargo.toml
crates/rustyn64-rdp/benches/: rdp_bench.rs
crates/rustyn64-rdp/src/: command.rs  lib.rs
crates/rustyn64-rsp/: Cargo.toml
crates/rustyn64-rsp/benches/: rsp_bench.rs
crates/rustyn64-rsp/src/: lib.rs  sp.rs  su.rs  vu.rs
crates/rustyn64-test-harness/: Cargo.toml
crates/rustyn64-test-harness/microcode/: SHA256SUMS  rsp_mixer.symbols.txt  symbols.txt
crates/rustyn64-test-harness/src/: accuracy.rs  frame.rs  golden.rs  lib.rs  rom.rs  runner.rs
crates/rustyn64-test-harness/tests/: audio_play_rom.rs  composite_frame.rs  determinism.rs  first_rom.rs  golden_frame.rs  golden_log.rs  microcode.rs  mixer_microcode.rs  rdp_conformance.rs  real_rom_frame.rs  systemtest.rs
crates/rustyn64-test-harness/tests/vectors/: alpha_compare_16.rvec  alpha_compare_z_16.rvec  cvg_dest_full_16.rvec  dither_tri_32.rvec  fill_rect_16.rvec  fill_tri_16.rvec  fill_tri_frac_16.rvec  fill_tri_neg_16.rvec  fill_tri_wide_16.rvec  prim_combiner_32.rvec  shade_depth_tri_frac_16.rvec  shade_grad_tri_32.rvec  shade_tri_32.rvec  shade_tri_frac_16.rvec  tex_rect_8x8_16.rvec  tex_rect_copy_16.rvec  tex_rect_mag_16.rvec  tex_rect_offset_16.rvec  tex_tri_16.rvec  tex_tri_fixed_16.rvec
crates/rustyn64-test-harness/tests/vectors/fuzz/: README.md  fz_fill_000.rvec  fz_fill_001.rvec  fz_fill_002.rvec  fz_fill_003.rvec  fz_fill_004.rvec  fz_fill_005.rvec  fz_fill_006.rvec  fz_fill_007.rvec  fz_fill_008.rvec  fz_fill_009.rvec  fz_fill_010.rvec  fz_fill_011.rvec  fz_fill_012.rvec  fz_fill_013.rvec  fz_fill_014.rvec  fz_fill_015.rvec  fz_fill_016.rvec  fz_fill_017.rvec  fz_fill_018.rvec  fz_fill_019.rvec  fz_fill_020.rvec  fz_fill_021.rvec  fz_fill_022.rvec  fz_fill_023.rvec  fz_fill_024.rvec  fz_fill_025.rvec  fz_fill_026.rvec  fz_fill_027.rvec  fz_fill_028.rvec  fz_fill_029.rvec  fz_fill_030.rvec  fz_fill_031.rvec  fz_fill_032.rvec  fz_fill_033.rvec  fz_fill_034.rvec  fz_fill_035.rvec  fz_fill_036.rvec  fz_fill_037.rvec  fz_fill_038.rvec  (+105 more)
crates/rustyn64-test-harness/vectors-gen/: .gitignore  Makefile  README.md  driver.c
docs/: DOCUMENTATION_INDEX.md  STATUS.md  accuracy-ledger.md  architecture.md  audio.md  cart.md  cartridge-format.md  compatibility.md  cpu.md  engineering-lessons.md  frontend.md  glossary.md  performance.md  rdp.md  rsp.md  rspq-boot.md  scheduler.md  testing-strategy.md
docs/adr/: 0001-master-clock-lockstep-scheduler.md  0002-fractional-timebase-refactor.md  0002-lle-coprocessors.md  0003-no-board-tiering-honesty-gate.md  0004-determinism-contract.md  0005-sub-cycle-bus-timing-refactor.md  0006-one-canonical-master-clock.md  0007-cycle-accurate-vr4300-pipeline.md  0008-microcode-boot-harness.md
docs/release-notes/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md
ref-docs/: 2026-07-20-vr4300-timing-supplement-corrections.md  2026-07-20-vr4300-timing-supplement.md  README.md  research-report.md
scripts/: agy-review.sh  check_microcode_blob.sh  check_no_conflict_markers.sh  check_no_roms.sh  mirror_n64brew_wiki.py
tests/roms/: README.md
tests/roms/homebrew/: LICENSE  README.md  audio_play.s  audio_play.z64  build.sh  render_fill.s  render_fill.z64
tests/roms/n64-systemtest/: n64-systemtest.z64
to-dos/: LOCKSTEP-CHECKLIST.md  ROADMAP.md  VERSION-PLAN.md
to-dos/phase-0-foundation/: overview.md  sprint-1-workspace-ci.md  sprint-2-reference-corpus.md
to-dos/phase-1-cpu-golden-log/: overview.md  sprint-1-integer-core.md  sprint-2-cop0-tlb-exceptions.md
to-dos/phase-2-rsp-lle/: overview.md  sprint-1-scalar-sp.md  sprint-4-microcode-boot.md
to-dos/phase-3-rdp-lle-vi/: overview.md  sprint-1-decode-vi.md  sprint-2-texture.md  sprint-3-pipeline.md
to-dos/phase-4-ai-audio/: overview.md  sprint-1-ai-dma.md
to-dos/phase-5-cart-boot-saves/: overview.md  sprint-1-pi-dma.md
to-dos/phase-6-frontend-integration/: overview.md  sprint-1-shell-wiring.md
to-dos/phase-7-accuracy-breadth/: overview.md  sprint-1-battery-triage.md
to-dos/phase-8-reach/: overview.md  sprint-1-netplay.md
