[workspace]
resolver = "2"
# Gitignored study/reference trees that contain their own Cargo projects
# (ref-proj/n64-systemtest, ref-proj/gopher64, ...). Without this, cargo's
# upward workspace discovery makes those crates resolve THIS workspace as their
# root and try to parse our members -- which fails outright on the older pinned
# toolchains some of them require. Excluding them lets each build standalone.
exclude = ["ref-proj", "n64brew_wiki"]
members = [
    "crates/rustyn64-core",
    "crates/rustyn64-cpu",
    "crates/rustyn64-rsp",
    "crates/rustyn64-rdp",
    "crates/rustyn64-audio",
    "crates/rustyn64-cart",
    "crates/rustyn64-netplay",
    "crates/rustyn64-cheevos",
    "crates/rustyn64-frontend",
    "crates/rustyn64-test-harness",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
authors = ["DoubleGate <parobek@gmail.com>"]
repository = "https://github.com/doublegate/RustyN64"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
