[package]
name = "rustyn64-rdp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2"
rustyn64-cart = { path = "../rustyn64-cart", version = "0.1.0", default-features = false }

[lints]
workspace = true
