[package]
name = "rustyn64-test-harness"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-roms = []          # compiles the committed CC0/public-domain suites + integration tests
commercial-roms = []    # the local-dump oracle (ROMs gitignored; commit only screenshots/.snap)

[dependencies]
rustyn64-core = { path = "../rustyn64-core", version = "0.4.1" }

[dev-dependencies]
insta = "1"

[lints]
workspace = true
